hphp/test/zend/good/ext/standard/tests/class_object/get_parent_class_variation_002.php.expectf
*** Testing get_parent_class() : usage variations ***

Arg value 0 
string(69) "get_parent_class() was called with integer, expected object or string"

Arg value 1 
string(69) "get_parent_class() was called with integer, expected object or string"

Arg value 12345 
string(69) "get_parent_class() was called with integer, expected object or string"

Arg value -2345 
string(69) "get_parent_class() was called with integer, expected object or string"

Arg value 10.5 
string(68) "get_parent_class() was called with double, expected object or string"

Arg value -10.5 
string(68) "get_parent_class() was called with double, expected object or string"

Arg value 101234567000 
string(68) "get_parent_class() was called with double, expected object or string"

Arg value 1.07654321E-9 
string(68) "get_parent_class() was called with double, expected object or string"

Arg value 0.5 
string(68) "get_parent_class() was called with double, expected object or string"

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value Array 
bool(false)

Arg value  
string(66) "get_parent_class() was called with null, expected object or string"

Arg value  
string(66) "get_parent_class() was called with null, expected object or string"

Arg value 1 
string(69) "get_parent_class() was called with boolean, expected object or string"

Arg value  
string(69) "get_parent_class() was called with boolean, expected object or string"

Arg value 1 
string(69) "get_parent_class() was called with boolean, expected object or string"

Arg value  
string(69) "get_parent_class() was called with boolean, expected object or string"

Arg value  
bool(false)

Arg value  
bool(false)

Arg value string 
bool(false)

Arg value String 
bool(false)
Error: 4096 - Object of class stdClass could not be converted to string, %s/get_parent_class_variation_002.php(66)

Arg value  
bool(false)
Done
